--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -2,10 +2,11 @@
   background: #fff;
   border-radius: 2px;
   height: 200px;
-  margin: 1rem;
+  margin: 3rem;
   width: 150px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   transition: transform .2s;
+  float:left;
 }
 
 img:hover {
