--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,3 +1,7 @@
+/*
+ *  CSS for the NavBar component
+ */
+
 .clearfix::after {
     content: "";
     clear: both;
@@ -5,7 +9,7 @@
 }
 
 .clicky-nav-bar {
-    background: darkblue;
+    background: darkslateblue;
     color: white;
     max-width: 100%;
     padding: 20px 0px;
@@ -13,6 +17,7 @@
 }
 
 .clicky-name {
+    font-size: 40px;
     font-weight: 900;
 }
 
@@ -24,8 +29,11 @@
     width: 33%;
 }
 
-.clicky-name,
 .clicky-msg,
 .clicky-results {
     font-size: 30px;
+}
+
+a {
+    color: white;
 }
