--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,10 +5,10 @@
 .clicky-header {
     background-color: darkslategray;
     color: white;
-    font-size: 25px;
+    font-size: 2vw;
     text-align: center;
-    padding: 30px 0;
+    padding: 10px 0;
     /*
-    margin-top: 80px;
-    */
+    margin-top: 60px;
+    */    
 }
