--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,7 +8,95 @@
     font-size: 2vw;
     text-align: center;
     padding: 10px 0;
-    /*
-    margin-top: 60px;
-    */    
+    margin: 5rem 0 0 0;
+}
+
+@media only screen and (max-width: 2040px) {
+    .clicky-header { 
+        margin: 6.5rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1940px) {
+    .clicky-header { 
+        margin: 6.2rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1840px) {
+    .clicky-header { 
+        margin: 5.9rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1740px) {
+    .clicky-header { 
+        margin: 5.6rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1640px) {
+    .clicky-header { 
+        margin: 5.3rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1540px) {
+    .clicky-header { 
+        margin: 5.0rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .clicky-header { 
+        margin: 4.7rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1340px) {
+    .clicky-header { 
+        margin: 4.4rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1240px) {
+    .clicky-header { 
+        margin: 4.3rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1140px) {
+    .clicky-header { 
+        margin: 4.0rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1040px) {
+    .clicky-header { 
+        margin: 3.7rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 940px) {
+    .clicky-header { 
+        margin: 3.4rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 840px) {
+    .clicky-header { 
+        margin: 3.1rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 740px) {
+    .clicky-header { 
+        margin: 2.8rem 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .clicky-header { 
+        margin: 2.6rem 0 0 0;
+    }
 }
